--- a/style.css
+++ b/style.css
@@ -10,20 +10,22 @@ body {
 body {
   font-family: "Montserrat";
   display: grid;
-  place-content: center;
+  align-items: center;
   background: #1c1c1c;
-  background: linear-gradient(
-    0deg,
-    rgba(34, 34, 34, 1) 32%,
-    rgba(28, 28, 28, 1) 32%,
-    rgba(28, 28, 28, 1) 100%
-  );
+  background: url("./images/sky2_dark.jpg");
+  background-size: cover;
   color: #fff;
+}
+
+.container {
+  width: 50%;
+  margin-left: 4em;
+  height: 50vh;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 2.4rem;
+  font-size: 3rem;
 }
 
 p {
@@ -43,5 +45,5 @@ span::before {
   width: 80%;
   bottom: 0.1em;
   z-index: -1;
-  background: #71b31b;
+  background: #e88a62;
 }
